<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtherUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            tools:text="Lola Zink"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/i_will_be_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOtherUserName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/end_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgCurrentUserRole" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvRequestEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/end_date_format"
            app:layout_constraintEnd_toStartOf="@+id/ivCalendar"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/rgCurrentUserRole" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCalendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgCurrentUserRole"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequestEndDate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRequestNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <RadioGroup
            android:id="@+id/rgCurrentUserRole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btnMentorRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentor" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btnMenteeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentee" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendRequest"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_request"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRequestNotes"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>