...
    <string name="no_current_mentorship_relation">You are not in a current mentorship relation.</string>
    <string name="no_recent_achievements">No recent achievements</string>
    <string name="no_tasks">No tasks</string>
    <string name="not_available_to_mentor_or_mentee">Not available to be a mentor or a mentee</string>
    <string name="not_implemented">This feature is not implemented yet.</string>
    <string name="notes">Notes</string>
    <string name="notes_empty_error">Notes cannot be empty</string>
    <string name="occupation">Occupation</string>
    <string name="ok">OK</string>
    <string name="only_available_to_mentee">Only available to be a mentee</string>
    <string name="only_available_to_mentor">Only available to mentor</string>
    <string name="organization">Organization</string>
    <string name="our_github_repo">Our Github Repo</string>
...
